DPO-1446 Simppeli Json liikennetiedotteen trafficAnnouncementType väärin _V1